feat: implement v2 spec
